# vllm

./: CONNECT_DOCKER_CONTAINERS.md  DOCKER_PORT_QUICKFIX.md  EXPOSE_DOCKER_PORT.md  MULTIMODEL_GUIDE.md  QUICKSTART_LLAMA1B_OPENWEBUI.md  QUICKSTART_OPENWEBUI.md  README.md  README_OPENWEBUI.md  README_OPENWEBUI_SETUP.md  TROUBLESHOOTING_INFERENCE.md  TT_INFERENCE_SERVER_AUTH_GUIDE.md  TT_INFERENCE_SERVER_SETUP.md  check_environment.sh  check_vllm_container.sh  docker-compose-both-containers.yaml  docker-compose-openwebui-multimodel.yaml  docker-compose-openwebui.yaml  pyproject.toml  qwen_image.py  reproduce_tt_dp_kv_bugs.py  requirements-common.txt  run_inference_fixed.sh  run_llama_1b_offline.sh  run_open_webui.sh  run_open_webui_docker_network.sh  run_open_webui_external.sh  run_server_llama_1b.sh  setup-metal.sh  setup.py  start_llama1b_server.sh  start_multimodel_servers.sh  stop_multimodel_servers.sh  test_openwebui_connection.sh  test_server.sh  typos.toml
plugins/vllm-tt-plugin/: README.md  pyproject.toml
plugins/vllm-tt-plugin/docs/: SCHEDULING.md
plugins/vllm-tt-plugin/docs/tt_metal/: README.md  install-vllm-tt.sh  prompts_overlapping.json
plugins/vllm-tt-plugin/examples/: offline_inference_tt.py
plugins/vllm-tt-plugin/src/vllm_tt_plugin/: async_decode.py  config.py  engine.py  lane_scheduler.py  launcher.py  loader.py  model_runner.py  platform.py  scheduler.py  worker.py
plugins/vllm-tt-plugin/tests/: test_lane_scheduler.py
plugins/vllm-tt-plugin/tests/tt/: conftest.py  test_full_dp_mode.py  test_host_only_params.py  test_logprobs.py  (+5 more)
(+176 files in other folders)
